--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,10 @@
         <div class="zoomIn" onclick="zoomin()"></div>
         <div class="zoomScale">100%</div>
         <div class="zoomOut" onclick="zoomout()"></div>
+        <div class="snapshot" onclick="snapshot()"></div>
+    </div>
+    <div id="ssMenu" hidden>
+        <div id=ssItem0 class="ssItem" onclick="novoSnapshot()">Adicionar novo snapshot</div>
     </div>
 </body>
 <script>carregamento()</script>
