Revisão do frontend concluída

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,11 +22,11 @@
         <div class="button save" title="Salvar arquivo" onclick="saveFile()"></div>
         <div class="button board" title="Selecionar quadro" onclick="showList('board')"></div>
         <div id="boardList" class="list" hidden>
-            <div class="listItem" onclick="newItem('board')">Adicionar novo quadro</div>
+            <div class="listItem" onclick="newListItem('board')">Adicionar novo quadro</div>
         </div>
         <div class="button snapshot" title="Selecionar instantâneo" onclick="showList('snapshot')"></div>
         <div id="snapshotList" class="list" hidden>
-            <div class="listItem" onclick="newItem('snapshot')">Adicionar novo instantâneo</div>
+            <div class="listItem" onclick="newListItem('snapshot')">Adicionar novo instantâneo</div>
         </div>
         <div class="button zoomIn" title="Aproximar" onclick="zoom('+')"></div>
         <div id="zoomRate" class="zoomScale"></div>
