Controle de usuários e bug fix

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,6 +31,7 @@
         <div class="button zoomIn" title="Aproximar" onclick="zoom('+')"></div>
         <div id="zoomRate" class="zoomScale"></div>
         <div class="button zoomOut" title="Afastar" onclick="zoom('-')"></div>
+        <div id="users" class="users" title="Usuários online"></div>
     </div>
 </body>
 <script>pageLoad()</script>
