--- a/frontend/room.html
+++ b/frontend/room.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>Quadro digital para post-its</title>
-    <link rel="icon" type="image/png" href="img/storm.png" />
+    <link rel="icon" type="image/png" href="img/logo.png" />
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/room.css">
 </head>
@@ -24,12 +24,8 @@
         <div id="boardList" class="list" hidden>
             <div class="listItem" onclick="newListItem('board')">Adicionar novo quadro</div>
         </div>
-        <div class="button snapshot" title="Selecionar instantâneo" onclick="showList('snapshot')"></div>
-        <div id="snapshotList" class="list" hidden>
-            <div class="listItem" onclick="newListItem('snapshot')">Adicionar novo instantâneo</div>
-        </div>
         <div class="button zoomIn" title="Aproximar" onclick="zoom('+')"></div>
-        <div id="zoomRate" class="zoomScale"></div>
+        <div id="zoomRate" class="zoomScale" title="Zoom atual"></div>
         <div class="button zoomOut" title="Afastar" onclick="zoom('-')"></div>
         <div id="users" class="users" title="Usuários online"></div>
     </div>
